--- a/config.yml
+++ b/config.yml
@@ -11,14 +11,8 @@ pipeline:
 # # If you'd like to customize it, uncomment and adjust the pipeline.
 # # See https://rasa.com/docs/rasa/tuning-your-model for more information.
   
-  #- name: WhitespaceTokenizer
-  - name: SpacyNLP
-    model: en_core_web_lg
-  - name: SpacyTokenizer
-  - name: SpacyFeaturizer
-    pooling: mean
-  - name: SpacyEntityExtractor  
-    dimensions: ["PERSON", "DATE", "CARDINAL"]  
+  - name: WhitespaceTokenizer
+    
   # - name: RegexEntityExtractor
   #   # text will be processed with case insensitive as default
   #   case_sensitive: False
@@ -34,6 +28,13 @@ pipeline:
     analyzer: char_wb
     min_ngram: 1
     max_ngram: 4
+  - name: SpacyNLP
+    model: en_core_web_lg
+  - name: SpacyTokenizer
+  - name: SpacyFeaturizer
+    pooling: mean
+  - name: SpacyEntityExtractor  
+    dimensions: ["PERSON", "DATE", "CARDINAL"]
   - name: DIETClassifier
     epochs: 100
     constrain_similarities: true
